# test.ALFI

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  helper.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  clang-tidy.yml  codeql.yml  doxygen.yml
ALFI/: ALFI.h  CMakeLists.txt
ALFI/ALFI/: config.h  dist.h  misc.h  poly.h  ratf.h  spline.h  util.h
ALFI/ALFI/spline/: cubic.h  linear.h  polyeqv.h  quadratic.h  step.h  util.h
ALFI/ALFI/util/: arrays.h  linalg.h  misc.h  numeric.h  points.h  poly.h  spline.h  stat.h
benches/: CMakeLists.txt  bench_data.h  bench_utils.h
benches/horner/: bench_horner.cpp  results-2025.04.30-02:51.txt  results-2025.04.30-03:49.txt
benches/misc/: bench_barycentric.cpp
benches/poly/: bench_poly.cpp
benches/ratf/: bench_ratf.cpp
benches/spline/: bench_cubic.cpp  bench_linear.cpp  bench_polyeqv.cpp  bench_quadratic.cpp  bench_step.cpp
docs/doxygen/: Doxyfile
examples/: CMakeLists.txt
examples/dist_QCustomPlot/: CMakeLists.txt  dist_QCustomPlot.cpp
examples/dist_gnuplot/: CMakeLists.txt  dist_gnuplot.cpp
examples/interpolation/: CMakeLists.txt  interpolation.cpp
examples/interpolation_qwt/: CMakeLists.txt  interpolation_qwt.cpp
examples/pade/: CMakeLists.txt  pade_QCustomPlot.cpp
tests/: CMakeLists.txt  test_utils.h
tests/bary/: test_barycentric.cpp
tests/misc/: test_barycentric.cpp
tests/poly/: test_case.h  test_imp_lagrange.cpp  test_lagrange.cpp  test_newton.cpp  test_poly.cpp
tests/ratf/: test_ratf.cpp
tests/spline/: test_cubic.cpp  test_linear.cpp  test_polyeqv.cpp  test_quadratic.cpp  test_step.cpp
